--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^16.5.0",
     "fs": "^0.0.1-security",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "reset-css": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
