--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fs": "^0.0.1-security",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.5.3",
     "reset-css": "^5.0.2"
   },
   "devDependencies": {
